# nt_editapp

./: .gitignore  package-lock.json  test_api.js  test_crop_tool.py  test_standalone.py
backend/app_main/: pyproject.toml
backend/chatbot/: chat_ui.py  chatagent.py  default_system_prompt.txt
backend/editgenerator/: README.md  editagent.py  editagent_reedit.py  editagent_roughcut.py  edited_output.json  main.py  projectbrieftemp.md  pyproject.toml  systempromptv1.md
backend/editgenerator/edits/: 20250509_MTC_2206.MP4.transcript.edited.json  20250509_MTC_2206.MP4.transcript.edited.thinking.txt  Video_Edit.edited.json  Video_Edit.edited.thinking.txt  edited_output.json
backend/editgenerator/prompts/: prompts.py  prompts_reedit.py  systempromptv1.txt  userpromptv1.txt
backend/editgenerator/toolcalling/: toolcaller.py  tooldiretory.json
backend/python_services/: main.py  pyproject.toml
backend/python_services/data/analyzed/: 20250509_MTC_2206.transcript.json
backend/python_services/data/timelineprocessing/timeline_edited/: Nice_Touch_launch_Video_edit_20250624_135911.json  Nice_Touch_launch_Video_edit_20250624_135911.otio  Nice_Touch_launch_Video_reedit_v2_20250627_173230.json  Nice_Touch_launch_Video_reedit_v2_20250627_173230.otio
backend/python_services/data/timelineprocessing/timeline_ref/: exported_timeline.json  exported_timeline.otio
backend/python_services/services/ai_services/: chatbot_CLI_test.py  chatbot_backend.py  editagent_reedit.py  editagent_roughcut.py
backend/python_services/services/ai_services/prompts/: prompts_chatbot.py  prompts_reedit.py  prompts_roughcut.py
backend/python_services/services/ai_services/toolcalling/: toolcaller.py
backend/python_services/services/assetanalysis/: videoanalyzer.py  videoanalyzer_test.py
backend/python_services/services/resolveautomation/: AI_AGENT_README.md  README.md  SETUP_README.md  datapipeline.py  exportotio.py  importotio.py  json2otio.py  otio2json.py  pipeline_api.py  resolve_api.py  setup_resolve_env.bat  test_basic_connection.py
backend/python_services/services/resolveautomation/lib/: DaVinciResolveScript.py
backend/python_services/services/resolveautomation/zold/: aaf_handler.py
backend/python_services/testUI/: pythonstacktest.py
backend/resolveautomation/: aaf_handler.py  exportotio.py  importotio.py  json2otio.py  main.py  otio2json.py  pyproject.toml  resolve_api.py  test_resolve_api.py
backend/transcriptanalysis/: API_README.md  README.md  api.py  main.py  pyproject.toml  videoanalyzer.py  videoanalyzerstructure.md
data/: 20250509_MTC_2206.MP4.transcript.json  82e06fc0-ebc4-4b67-944c-aefdb6fbb3ee.json  Nice Touch Timeline.otio  projectdata.json
data/analyzed/: 20250509_MTC_2206.transcript.json
data/edits/: Nice_Touch_launch_Video_edit_20250530_164226.json
data/edits/fromNLE/: blanktimeline.otio  nicetouchapitesttimeline.otio
data/edits/toNLE/: nicetouchapitesttimeline.json  nicetouchapitesttimeline_modified.otio
data/edits/zold/: Nice_Touch_launch_Video_edit_20250530_164226.thinking.txt
data/timelineprocessing/timeline_edited/: Nice_Touch_launch_Video_edit_20250609_202325.json  Nice_Touch_launch_Video_edit_20250609_202325.otio  Nice_Touch_launch_Video_edit_20250609_202325.thinking.txt  Nice_Touch_launch_Video_reedit_v2_20250609_204600.json  Nice_Touch_launch_Video_reedit_v2_20250609_204600.otio  Nice_Touch_launch_Video_reedit_v2_20250609_204600.thinking.txt  Nice_Touch_launch_Video_reedit_v2_20250612_143852.json  Nice_Touch_launch_Video_reedit_v2_20250612_143852.otio  Nice_Touch_launch_Video_reedit_v2_20250612_143852.thinking.txt
data/timelineprocessing/timeline_ref/: Nice Touch Timeline.otio  Nice_Touch_launch_Video_edit_20250609_202325 (2).json  Nice_Touch_launch_Video_edit_20250609_202325 (2).otio  Nice_Touch_launch_Video_edit_20250612_143535.json  Nice_Touch_launch_Video_edit_20250612_143535.otio
docs/: assemblyai_Transcribeaudio.md  opentimelineio_readthedocs_io_docs_complete.md  resolve_docs.md
electron/: .gitignore  index.html  package-lock.json
electron/app_orchestrator/: .gitignore  README.md  env.example  package-lock.json  package.json  tsconfig.json
electron/app_orchestrator/src/: index.ts
electron/dist-electron/: main.js
electron/electron/: main.ts
electron/src/: App.css  App.tsx  index.css
frontend_test/: package-lock.json  package.json
frontend_test/src/: App.tsx  analyzer.tsx  chatbot.tsx  projectmanager.tsx  styles.css
(+16 files in other folders)
