[project]
name = "transcriptanalysis"
version = "0.1.0"
description = "Video transcript analysis tool that generates frame-accurate JSON transcripts"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0",
    "ffmpeg-python>=0.2.0",
    "jsonschema>=4.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.5.0",
    "aiofiles>=23.0.0",
    "websockets>=12.0",
]

[project.scripts]
videoanalyzer = "videoanalyzer:main"
transcription-api = "api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["."]
